--- a/public/css/home/home.css
+++ b/public/css/home/home.css
@@ -1,10 +1,18 @@
 body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin: 0;
     padding: 0;
     color: white;
     background-color: black;
+    /*background-image: url(../../imgs/Background.jpg);*/
+    background-image: url(https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTRkMGU4ZmU0M2FmMWRmYjA2ZTYyYjk5ZjVmZWMzYzA0Y2MwYjg0ZCZjdD1n/3ov9k1173PdfJWRsoE/giphy.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 section {
