--- a/public/css/pac-man/game.css
+++ b/public/css/pac-man/game.css
@@ -7,37 +7,15 @@ body {
     background-color: #222;
 }
 
+body:hover {
+    cursor: default;
+}
+
 section {
     color: white;
     font-family: game, Arial, Helvetica, sans-serif;
     width: 100%;
     height: 100%;
-}
-
-/* ---- */
-
-ins.adsbygoogle {
-    position: absolute;
-    right: 5px;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 200px;
-    height: auto;
-    /*border: solid #444 2px;*/
-    border-radius: 8px;
-}
-
-ins.adsbygoogle span {
-    display: none; /* */
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 10px;
-    position: absolute;
-    top: -10px;
-    left: 5px;
-    padding: 2px;
-    border: solid #222 2px;
-    background-color: #444;
-    border-radius: 4px;
 }
 
 /* ---- */
@@ -69,76 +47,105 @@ a#owner {
 }
 
 div#game {
-    position: absolute;
+    display: grid;
+    /*position: absolute;
     left: 50%;
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
-    width: 500px;
-    height: 574px;
+    width: 30vw;
+    height: 32vw;*/
+    position: absolute;
+    left: 50%;
+    top: 45%;
+    transform: translateX(-50%) translateY(-50%);
+    width: 69vh;
+    height: 70vh;
     background-color: black;
 }
 
 canvas#gameCanvas {
+    display: block;
+    grid-row: 2;
+    background-color: black;
+    width: 100% ;
     /*image-rendering: pixelated;
     image-rendering: crisp-edges;
     image-rendering: -moz-crisp-edges;*/
-    position: absolute;
-    width: 500px;
-    height: 500px;
-    left: 0;
-    bottom: 25px;
+}
+
+canvas#gameCanvas:hover {
+    cursor: pointer;
+}
+
+/* ---- */
+
+div#gameHUD {
+    position: relative;
+    grid-row: 1;
+    display: block;
+    font-size: 25px;
+    height: 60px;
+    width: 100%;
     background-color: black;
 }
 
-ul#gameHUD {
+span#highScoreTitle {
+    display: none;
+    font-size: 28px;
+    margin-top: 0px;
+}
+
+span#highScore {
+    display: none;
+    text-align: center;
+    margin-top: 3px;
+}
+
+span#score {
+    display: none;
     position: absolute;
+    text-align: left;
+    bottom: 5px;
+    left: 5px;
+}
+
+span#level {
+    display: none;
+    position: absolute;
+    text-align: right;
+    bottom: 5px;
+    right: 5px;
+}
+
+/* ---- */
+
+div#gameHUD2 {
+    display: block;
+    position: relative;
+    grid-row: 3;
+    height: 35px;
     width: 100%;
-    height: 50px;    
+    background-color: black;
 }
 
-li#highScoreTitle {
+span#codesUsed {
     display: none;
+    text-align: right;
     font-size: 20px;
-    margin-top: 5px;
-}
-
-li#highScore {
-    display: none;
-    position: absolute;
-    bottom: 5px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-li#score {
-    display: none;
-    position: absolute;
-    left: 20px;
-    bottom: 5px;
-}
-
-li#level {
-    display: none;
-    position: absolute;
-    right: 20px;
-    bottom: 5px;
+    margin-right: 5px;
+    margin-top: 10px;
+    color: red;
 }
 
 img.pacmanLife {
     position: absolute;
-    bottom: 2.5px;
-    width: 20px;
-    height: 20px;
+    bottom: 4px;
+    width: 25px;
+    height: 25px;
     transform: rotateZ(180deg);
 }
 
-li#codesUsed {
-    display: none;
-    position: absolute;
-    bottom: 2.5px;
-    right: 5px;
-    color: red;
-}
+/* ---- */
 
 div#mobileButtonsContaner {
     display: none;
